When localnav is active, section headers should be visible on desktop

--- a/common/app/assets/stylesheets/module/nav/_localnav.scss
+++ b/common/app/assets/stylesheets/module/nav/_localnav.scss
@@ -24,6 +24,17 @@
             background-color: #ffffff;
         }
     }
+
+    h2.article-zone,
+    .section-head,
+    .front-section:first-child .sub-section-head {
+        display: none;
+
+        @media (min-width: $desktop) {
+            display: block;
+        }
+    }
+
 }
 
 
