--- a/common/app/assets/stylesheets/module/experiments/_reaction.scss
+++ b/common/app/assets/stylesheets/module/experiments/_reaction.scss
@@ -11,7 +11,6 @@
     }
 
     ul {
-        margin: 0 10px;
         overflow: auto;
     }
 }
@@ -60,6 +59,8 @@
 .story-reaction .cta-new {
     position: absolute;
     bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .story-content {
