--- a/admin/app/views/admin.scala.html
+++ b/admin/app/views/admin.scala.html
@@ -8,6 +8,7 @@
             <li><a href="/admin/feature-trailblock">Feature trailblock editor</a></li>
             <li><a href="/events">Stories</a> - Experimental</li>
             <li><a href="/fronts">Fronts</a></li>
+            <li><a href="/fronts2">Fronts (knockout)</a></li>
         </ul>
     </div>
     <div class="row">
