--- a/common/app/assets/stylesheets/module/nav/_localnav.scss
+++ b/common/app/assets/stylesheets/module/nav/_localnav.scss
@@ -30,7 +30,7 @@
     .front-section:first-child .sub-section-head {
         display: none;
 
-        @media (min-width: $desktop) {
+        @media (min-width: $tablet) {
             display: block;
         }
     }
