--- a/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
+++ b/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
@@ -30,21 +30,23 @@
 
 .i-guardian-picks { background-position: -350px -8px; width: 15px; height: 46.624px; }
 
-.i-image { background-position: -365px -8px; width: 12px; height: 9px; }
+.i-image-white { background-position: -365px -8px; width: 12px; height: 9px; }
 
-.i-livequote-after { background-position: -377px -8px; width: 37px; height: 20px; }
+.i-image { background-position: -377px -8px; width: 12px; height: 9px; }
 
-.i-livequote-before { background-position: -414px -8px; width: 37px; height: 20px; }
+.i-livequote-after { background-position: -389px -8px; width: 37px; height: 20px; }
 
-.i-local-nav-arrow { background-position: -451px -8px; width: 49px; height: 37px; }
+.i-livequote-before { background-position: -426px -8px; width: 37px; height: 20px; }
 
-.i-mail { background-position: -500px -8px; width: 28.004px; height: 20px; }
+.i-local-nav-arrow { background-position: -463px -8px; width: 49px; height: 37px; }
 
-.i-menu-active { background-position: -528px -8px; width: 18px; height: 12px; }
+.i-mail { background-position: -512px -8px; width: 28.004px; height: 20px; }
 
-.i-menu { background-position: -546px -8px; width: 18px; height: 12px; }
+.i-menu-active { background-position: -540px -8px; width: 18px; height: 12px; }
 
-.i-powered-by-ee { background-position: -500px -28px; width: 68px; height: 31px; }
+.i-menu { background-position: -558px -8px; width: 18px; height: 12px; }
+
+.i-powered-by-ee { background-position: -512px -28px; width: 68px; height: 31px; }
 
 .i-quote-marks { background-position: -141px -59px; width: 64px; height: 32px; }
 
