--- a/common/app/assets/stylesheets/base/_type.scss
+++ b/common/app/assets/stylesheets/base/_type.scss
@@ -34,6 +34,7 @@ body {
 
 // Base headings
 h1, h2, h3, h4, h5, h6 {
+    color: #333333;
     font-family: $serif;
     margin: 0;
     text-rendering: optimizeLegibility;
