--- a/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
+++ b/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
@@ -34,23 +34,25 @@
 
 .i-fullscreen-toggle { background-position: -327px -8px; width: 12px; height: 12px; }
 
-.i-gplus { background-position: -339px -8px; width: 24.361px; height: 20.535px; }
+.i-gallery { background-position: -339px -8px; width: 16px; height: 14px; }
 
-.i-guardian-logo { background-position: -363px -8px; width: 107.667px; height: 20.125px; }
+.i-gplus { background-position: -355px -8px; width: 24.361px; height: 20.535px; }
 
-.i-guardian-picks { background-position: -470px -8px; width: 15px; height: 46.624px; }
+.i-guardian-logo { background-position: -379px -8px; width: 107.667px; height: 20.125px; }
 
-.i-image-inverted { background-position: -485px -8px; width: 12px; height: 9px; }
+.i-guardian-picks { background-position: -486px -8px; width: 15px; height: 46.624px; }
 
-.i-image-white { background-position: -497px -8px; width: 12px; height: 9px; }
+.i-image-inverted { background-position: -501px -8px; width: 12px; height: 9px; }
 
-.i-image { background-position: -509px -8px; width: 12px; height: 9px; }
+.i-image-white { background-position: -513px -8px; width: 12px; height: 9px; }
 
-.i-livequote-after { background-position: -521px -8px; width: 37px; height: 20px; }
+.i-image { background-position: -525px -8px; width: 12px; height: 9px; }
 
-.i-livequote-before { background-position: -485px -28px; width: 37px; height: 20px; }
+.i-livequote-after { background-position: -537px -8px; width: 37px; height: 20px; }
 
-.i-local-nav-arrow { background-position: -522px -28px; width: 49px; height: 37px; }
+.i-livequote-before { background-position: -501px -28px; width: 37px; height: 20px; }
+
+.i-local-nav-arrow { background-position: -538px -28px; width: 49px; height: 37px; }
 
 .i-mail { background-position: -8px -65px; width: 28.004px; height: 20px; }
 
