--- a/common/app/assets/stylesheets/module/trails/_trail.scss
+++ b/common/app/assets/stylesheets/module/trails/_trail.scss
@@ -57,7 +57,7 @@
     }
 }
 
-.trail__comment-count {
+/*.trail__comment-count {
     position: absolute;
     top: 8px;
     right: 0;
@@ -80,7 +80,57 @@
     }
 }
 
-  .trail:first-child .trail__comment-count { top: 12px; }
+  .trail:first-child .trail__comment-count { top: 12px; }*/
+
+.trail__comment-count,
+.trail__count {
+    position: absolute;
+    top: 8px;
+    right: 0;
+
+    a,
+    a:hover,
+    a:link,
+    a:active,
+    a:visited {
+        @extend %type-11;
+        float: right;
+        display: inline-block;
+        margin: 0 0 0 4px;
+        color: #F6644F;
+    }
+
+    i {
+        float: left;
+        margin: 3px 4px 0 0;
+    }
+}
+
+.trail:first-child .trail__count,
+.trail:first-child .trail__comment-count { top: 12px; }
+
+.trail__count--commentcount {
+    a,
+    a:hover,
+    a:link,
+    a:active,
+    a:visited {
+        color: #F6644F;
+    }
+}
+
+.trail__count--imagecount {
+    a,
+    a:hover,
+    a:link,
+    a:active,
+    a:visited {
+        color: #666666;
+    }
+
+    right: 8px;
+}
+
 
 @media (min-width: 53.125em) {
     .trail .img img {
@@ -130,6 +180,76 @@
         padding: 0;
     }
 }
+
+
+
+.trail--gallery {
+
+    background-color: #EEEEEE;
+    padding-bottom: 0;
+    margin-top: -4px; // O_o !!!!!!!!
+    border-bottom: 0;
+
+    .i-gallery {
+        margin: 0;
+    }
+
+    ul {
+        background-color: #ffffff;
+    }
+
+    .relative-timestamp,
+    .trail__headline {
+        margin-left: 8px;
+    }
+
+    .trail__headline {
+        margin-bottom: 8px;
+    }
+
+    .trail__item {
+        @include fixed-aspect(5, 3, 49.6%); // 5:3 aspect - works around thumbs being slightly different in size
+        margin-bottom: 3px;
+        float: left;
+        line-height: 0;
+        overflow: hidden;
+
+
+    }
+
+    .trail__item:nth-child(odd) {
+        float: right; // this aligns right edge correctly
+    }
+
+    .trail__item:first-child {
+        width: 100%;
+        padding-bottom: 0;
+        float: left;
+
+        .media_img {
+            position: static;
+        }
+    }
+
+    .media_img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+    }
+
+    @media (min-width: $tablet) {
+        .trail__item:first-child {
+            width: 66.3%;
+            float: left;
+        }
+        .trail__item {
+            @include fixed-aspect(5, 3, 33%);
+            float: right;
+        }
+    }
+}
+
 
 /**
  * @todo: Clean these up into proper modifiers
