referencing new front

--- a/common/app/assets/stylesheets/global.scss
+++ b/common/app/assets/stylesheets/global.scss
@@ -76,5 +76,5 @@
 @import "theme/_global-icons-svg";
 @import "theme/_icons";
 
-// Front refresh experiment
+// New front experiment
 @import "module/experiments/_front";
