--- a/admin/app/views/fronts.scala.html
+++ b/admin/app/views/fronts.scala.html
@@ -11,29 +11,24 @@
                 latest.term, valueUpdate: ["afterkeydown", "afterpaste"]'/>
             </h3>
 
-            <div class="connectedSortable throwAway" data-bind='foreach: latest.articles()'>
-                <div class="article" data-bind="attr: {'data-url': id}">
-                    <a class="article-title" data-bind="text: id, attr: {href: _absUrl}"></a>
-                </div>
-            </div>
+            <div class="connectedList throwAway" data-bind="template: {name: 'template_article', foreach: latest.articles()}"></div>
         </div>
 
         <div class="lists">
             <h3>List A</h3>
-            <div id="listA" class="connectedSortable" data-bind='foreach: listA'>
-                 <div class="article" data-bind="attr: {'data-url': id}">
-                    <a class="article-title" data-bind="text: id"></a>
-                </div>
-            </div>
+            <div id="listA" class="connectedList" data-bind="template: {name: 'template_article', foreach: listA}"></div>
+
             <h3>List B</h3>
-            <div id="listB" class="connectedSortable" data-bind='foreach: listB'>
-                 <div class="article" data-bind="attr: {'data-url': id}">
-                    <a class="article-title" data-bind="text: id"></a>
-                </div>
-            </div>
+            <div id="listB" class="connectedList" data-bind="template: {name: 'template_article', foreach: listB}"></div>
         </div>
 
     </div>
+
+    <script type="text/html" id="template_article">
+        <div class="article" data-bind="attr: {'data-url': id}">
+            <a class="article-title" data-bind="text: id, attr: {href: _absUrl}"></a>
+        </div>
+    </script>
     
     <script src="@routes.Assets.at("javascripts/fronts.js")"></script>
 }
