--- a/admin/app/views/admin.scala.html
+++ b/admin/app/views/admin.scala.html
@@ -16,4 +16,11 @@
             <li><a href="/dev/switchboard">Switchboard</a></li>
         </ul>
     </div>
+    <div class="row">
+    <h3>Metrics</h3>
+        <p class="muted">Ops metrics (is the site healthy?)</p>
+        <ul>
+            <li><a href="@controllers.metrics.routes.DashboardController.render()">Load Balancers</a></li>
+        </ul>
+    </div>
 }
