--- a/common/app/assets/stylesheets/module/trails/_trail.scss
+++ b/common/app/assets/stylesheets/module/trails/_trail.scss
@@ -40,7 +40,7 @@
         text-decoration: underline;
     }
 
-    .trail__headline__kicker {
+    .trail__headline-kicker {
         color: #F9AF41;
     }
 
