--- a/common/app/views/fragments/trails/gallery.scala.html
+++ b/common/app/views/fragments/trails/gallery.scala.html
@@ -6,7 +6,7 @@
 
     <h@headingLevel class="trail__headline type-5">
         @if(trail.isInPicturesSeries) {
-            <div class="trail__headline__kicker">In Pictures:</div>
+            <div class="trail__headline-kicker">In Pictures:</div>
         }
         <a href="@LinkTo{@trail.url}" data-link-name="@rowNum | text">
             @RemoveOuterParaHtml(trail.trailHeadline)
