--- a/common/app/assets/stylesheets/_vars.scss
+++ b/common/app/assets/stylesheets/_vars.scss
@@ -19,6 +19,7 @@ $desktop: 56.25em; //900px
    ========================================================================== */
 
 $desktopAd: 810px; // Pixel width for leader board change.
+$mobileLandscape: 30em;
 
 
 /* Layout dimensions
