--- a/admin/app/views/admin_main.scala.html
+++ b/admin/app/views/admin_main.scala.html
@@ -20,12 +20,14 @@
                     TagEntry: 'modules/tagEntry',
                     ItemSearch: 'modules/ItemSearch',
                     AutoComplete: 'modules/AutoComplete',
+                    knockout: 'components/knockout/build/output/knockout-latest.js',
                     Knockout: 'components/knockout/build/output/knockout-latest.js',
                     KnockoutSortable: 'components/knockout-sortable/src/knockout-sortable.js',
                     Reqwest: 'components/reqwest/reqwest',
                     EventEmitter: 'components/eventEmitter/EventEmitter',
                     bean: 'components/bean/bean',
-                    bonzo: 'components/bonzo/bonzo'
+                    bonzo: 'components/bonzo/bonzo',
+                    'jquery.ui.sortable': 'components/jquery-ui/ui/jquery.ui.sortable.js'
                 }
             }
         </script>
