Tests, refactor of Interactive bootstrap
- Refactored config out of the JavaScript
- Basic Jasmine test
- Passed nodelist, mediator to the external interactive module

--- a/common/app/assets/stylesheets/global.scss
+++ b/common/app/assets/stylesheets/global.scss
@@ -35,6 +35,7 @@
 @import "module/_live-blog";
 @import "module/football/_matches";
 @import "module/_discussion";
+@import "module/_interactive";
 
 
 /* ==========================================================================
