--- a/interactive/app/views/fragments/interactiveBody.scala.html
+++ b/interactive/app/views/fragments/interactiveBody.scala.html
@@ -22,9 +22,9 @@
 
          <div class="article__container">
              
-            <div class="article-body from-content-api" style="background:#ffc;margin:1em 0;padding:1em;">
+            <div class="article-body from-content-api">
 
-                <figure id="abcde">
+                <figure id="abcde" class="interactive">
                     This is an interactive.
                 </figure>
 
