Consecutive floated images are in the same column

--- a/common/app/assets/stylesheets/layout/_layout.scss
+++ b/common/app/assets/stylesheets/layout/_layout.scss
@@ -77,6 +77,7 @@
 .inline-image {
     width: $inArticleInlineImgWidth;
     float: left;
+    clear: left;
     margin: 3px 0 0 0;
     padding-right: 10px;
     padding-bottom: 15px;
