Fixed video element styling

--- a/common/app/assets/stylesheets/module/external/_from-content-api.scss
+++ b/common/app/assets/stylesheets/module/external/_from-content-api.scss
@@ -117,7 +117,8 @@ figure {
 
     iframe,
     object,
-    embed {
+    embed,
+    video {
         position: absolute;
         top: 0;
         left: 0;
