no need for full assets path

--- a/admin/app/views/admin_main.scala.html
+++ b/admin/app/views/admin_main.scala.html
@@ -12,7 +12,7 @@
         <link href="@routes.Assets.at("css/style.css")" rel="stylesheet">
         <script>
             var curl = {
-                baseUrl: '@{Configuration.assets.path}javascripts',
+                baseUrl: '/assets/javascripts',
                 paths: {
                     Common: 'common',
                     models: 'models',
