Remove spurious attribute

--- a/interactive/app/views/fragments/interactiveBody.scala.html
+++ b/interactive/app/views/fragments/interactiveBody.scala.html
@@ -24,7 +24,7 @@
              
             <div class="article-body from-content-api">
 
-                <figure id="abcde" class="interactive" data-interactive="@request.path.drop(1)"> <!-- FIXME fine until data comes from Composer -->
+                <figure class="interactive" data-interactive="@request.path.drop(1)"> <!-- FIXME fine until data comes from Composer -->
                     This is an interactive.
                 </figure>
 
