Detect In Pictures series using tag

--- a/common/app/assets/stylesheets/module/trails/_trail.scss
+++ b/common/app/assets/stylesheets/module/trails/_trail.scss
@@ -36,6 +36,10 @@
         text-decoration: underline;
     }
 
+    .trail__headline-kicker {
+        color: #F9AF41;
+    }
+
 .trail__img {
     display: none;
 
